--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cryptography>=43.0.3",
     "fastapi[standard]>=0.115.4",
     "orjson>=3.10.10",
     "paho-mqtt>=2.1.0",
