--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "paho-mqtt>=2.1.0",
     "pydantic>=2.9.2",
+    "requests>=2.32.3",
 ]
 
 [dependency-groups]
@@ -16,4 +16,5 @@ dev = [
     "pytest-mock>=3.14.0",
     "pytest>=8.3.3",
     "ruff>=0.7.1",
+    "types-requests>=2.32.0.20241016",
 ]
